name:          osm-to-cutemap
version:       0.0.0
cabal-version: >= 1.8
build-type:    Simple

executable          osm-to-cutemap
    hs-source-dirs: src
    main-is:        ./src/Main.hs
    ghc-options:    -Wall -threaded -O2 -rtsopts -with-rtsopts=-N
    extensions:     OverloadedStrings
    build-depends:  base   >= 4      && < 5
                  , scotty
