name:          osm-to-cutemap
version:       0.0.0
cabal-version: >= 1.8
build-type:    Simple

executable          osm-to-cutemap
    hs-source-dirs: src
    main-is:        Main.hs
    ghc-options:    -Wall -threaded -O2 -rtsopts -with-rtsopts=-N
    extensions:     OverloadedStrings
    build-depends:  base
                  , scotty
                  , HDBC
                  , HDBC-postgresql
                  , aeson
                  , bytestring
                  , text
                  , text-format-simple
